Implementacion de producto

--- a/web/WEB-INF/jspfpagina/2_menu.jspf
+++ b/web/WEB-INF/jspfpagina/2_menu.jspf
@@ -30,7 +30,7 @@
                                 for(LineaSubCategoria lineaSubCategoria : subCategoria.getLineaSubCategorias()){
                             %>
                             <ul>
-                                <li><a href="GestionarCategoria"><%= lineaSubCategoria.getNombre() %></a></li>
+                                <li><a href="GestionarProducto?codigo=<%= lineaSubCategoria.getCodigo() %>"><%= lineaSubCategoria.getNombre() %></a></li>
                             </ul>
                             <%
                                 }
