Implementacion de productos con sus etiquetas nuevo - oferta tanto en gestionarproduto como detalleproducto

--- a/web/WEB-INF/jspfpagina/4_piepagina.jspf
+++ b/web/WEB-INF/jspfpagina/4_piepagina.jspf
@@ -6,8 +6,7 @@
             <p class="pull-left">© 2016 MADDIE & ROSA.</p>
         </div>
         <div class="col-md-6">
-            <p class="pull-right">Todos los derechos reservados a <span>Carlos Osorio Perez</span><a href="c1_presentacion/vista/Administrador/index.jsp">Administrador</a>
-                
+            <p class="pull-right">Todos los derechos reservados a <span>Carlos Osorio Perez</span></a>                
                 <!-- Not removing these links is part of the licence conditions of the template. Thanks for understanding :) -->
             </p>
         </div>
